# DefectSense

./: .gitattributes  .gitignore  .gitmodules  README.md  docker-compose.yml  info.txt  pyproject.toml
azure_components/: azure_rg_presentation.html  container_presentation.html  storage_account_presentation.html  workspace_presentation.html
demo/: index.html
deployment/: deployment-k8s-config.yml  endpoint-k8s-config.yml
docker/: Dockerfile.np  Dockerfile.streamlit  howto.md
docs/: README.md  USER_GUIDE.md
environment/: environment.yml  environment_gpu.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
jobs/: data-validation-job.yml  training-job.yml
k8s/: deployment.yml  deployment_services_gpu.yml  service.yml
mlruns/0/: meta.yaml
mlruns/771190864212284085/: meta.yaml
mlruns/models/PadimONNX/: meta.yaml
models/: model_info.json  padim_bottle.pth  padim_model.onnx  padim_model.onnx.data
outputs/: data_validation.json
pipelines/: azure-mlops-pipeline - Copy.yml  azure-mlops-pipeline.yml  sync2github.yml
pipelines/infra/: azure-ml-bootstrap.yml  azure-ml-com.yml  azure_mlops_infra.yml
pipelines/templates/: acr_admin_login.yml  assign_acr_pull_role.yml  attach_acr_to_aks.yml  create_deployment.yml  create_endpoint.yml  data_validation.yml  deploy_acr_to_aks.yml  docker_build_np.yml  docker_tag_and_push.yml  download_model.yml  install_dependencies.yml  post_deployment_tests.yml  register_model.yml  training.yml  unit_test.yml
src/: fastapi_app.py  fastapi_app_np.py  register_baseline.py  score.py  streamlit_app.py  streamlit_app_v2.py  train.py  utils.py
src/DefectSense/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  compare_with_anomalib.py  config.yml  pyproject.toml  train_bottle.py  usage_example.py
src/DefectSense/anodet/: __init__.py
src/DefectSense/apps/: anomavision_gui_tkinter.py
src/DefectSense/apps/api/: fastapi_app.py
src/DefectSense/apps/ui/: gradio_app.py  run_app.py  streamlit_app.py
src/DefectSense/defectsense/: __init__.py  cli.py  detect.py  eval.py  export.py  feature_extraction.py  general.py  padim.py  train.py  utils.py
src/DefectSense/defectsense/datasets/: MQTTSource.py  StreamDataset.py  StreamSource.py  StreamSourceFactory.py  TCPsource.py  VideoSource.py  WebcamSource.py  dataset.py  mvtec_dataset.py
src/DefectSense/defectsense/inference/model/: wrapper.py
src/DefectSense/defectsense/inference/model/backends/: onnx_backend.py  openvino_backend.py  tensorrt_backend.py  torch_backend.py  torchscript_backend.py
src/DefectSense/defectsense/sampling_methods/: kcenter_greedy.py
src/DefectSense/docs/: api.md  benchmark.md  cli.md  config.md  contributing.md  fastapi_backend.md  index.md  installation.md  quickstart.md  troubleshooting.md
src/DefectSense/docs/cpp/: README.md
src/DefectSense/tests/: conftest.py  test_all_formats.py  test_backends.py  test_datasets.py  test_example.py  test_export_load_model.py  test_exporter.py  test_feature_extraction.py  test_inference_utils.py  test_mahalanobis.py  test_padim.py  test_padim_lite.py  test_torch_backend_pth.py
src/ai/: __init__.py  _common.py  compare.py  optimizer.py  registry.py
src/ui/: components.py  state.py  styles.py
tests/: test_defectsense.py
(+27 files in other folders)
