[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defectsense"
version = "3.4.0"
description = "Advanced Anomaly Detection Environment - Production Ready"
authors = [{ name = "Rayen Lassoued", email = "" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
keywords = ["anomaly", "vision", "computer-vision", "anomaly-detection", "PaDim"]

# --- Core Dependencies (Always Installed) ---
dependencies = [
    "numpy==1.26.4",
    "matplotlib==3.8.3",
    "scikit-learn>=1.2,<1.4",
    "scikit-image==0.22.0",
    "easydict==1.13",
    "tqdm>=4.67.1",
    "opencv-python>=4.6.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "openvino-dev>=2024.0",
    "fastapi>=0.127.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.12.5",
    "python-multipart==0.0.20",
    "streamlit>=1.52.2",
    "gradio>=6.3.0",
    "onnxscript>=0.6.2",
    "pytest>=8.0.2",
]

# --- Hardware Modifiers (Triggered by Extras) ---
[project.optional-dependencies]
cpu = ["torch>=2.4.0", "torchvision>=0.19.0", "torchaudio>=2.4.0"]
cu118 = ["torch>=2.4.0", "torchvision>=0.19.0", "torchaudio>=2.4.0"]
cu121 = ["torch>=2.4.0", "torchvision>=0.19.0", "torchaudio>=2.4.0"]
cu124 = ["torch>=2.4.0", "torchvision>=0.19.0", "torchaudio>=2.4.0"]

# Dev tools bundled as an extra
dev = ["pytest==8.0.2", "black==24.2.0", "flake8==7.0.0", "pre-commit==3.6.2"]

[project.scripts]
defectsense = "defectsense.cli:main"

# ==========================================
# UV HARDWARE ROUTING MATRIX
# ==========================================
[tool.uv]
override-dependencies = [
    # Python 3.10: cap below 1.24 (no cp310 wheels published for 1.24+)
    "onnxruntime>=1.16.0,<1.24.0 ; python_version == '3.10'",

    # Python 3.11+: use latest (supports IR version 10 models)
    "onnxruntime>=1.24.0 ; python_version >= '3.11'",
]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu118" },
        { extra = "cu121" },
        { extra = "cu124" },
    ],
]

# 1. Define the explicit registries
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# 2. Map the PyTorch libraries to the correct registry based on the requested Extra
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
]
